force-app/main/default/email_log_auditor/objects/EmailCategoryRule__mdt/EmailCategoryRule__mdt.object-meta.xml
<CustomObject>
    <label>Email Category Rule</label>
    <pluralLabel>Email Category Rules</pluralLabel>
</CustomObject>