force-app/main/default/email_log_auditor/objects/EmailCategoryRule__mdt/fields/MatchField__c.field-meta.xml
<CustomField>
    <fullName>MatchField__c</fullName>
    <label>Match Field</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subject</fullName>
                <default>true</default>
                <label>Subject</label>
            </value>
            <value>
                <fullName>FromAddress</fullName>
                <label>From Address</label>
            </value>
            <value>
                <fullName>ParentObjectType</fullName>
                <label>Parent Object Type</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>